Fix white space on the bottom of the Measurement page

--- a/src/stylesheet/CommonPage.module.css
+++ b/src/stylesheet/CommonPage.module.css
@@ -16,6 +16,10 @@
   padding-bottom: 100px;
 }
 
+.smallBottomPadding {
+  padding-bottom: 60px;
+}
+
 .pageBottomPadding {
   padding-bottom: 145px;
 }
